Thu Apr 23 01:14:16 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Majordomo.pm: Bump version number.

Wed Apr 22 02:24:12 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Resend.pm (_r_ck_body): Fix fix error in recursive call.
  	Fix some undef errors.

Tue Apr 21 00:31:45 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Resend.pm (_r_ck_body, _check_header): Give info about
 	date of original when duplicates are found.

Mon Apr 20 01:54:00 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/List.pm (check_dup): Return the actual data in case of a
 	duplicate, just in case someone wants it.

	* lib/mj_cf_defs.pl: apply_global_xforms should default to 'yes'.

	* lib/Mj/List.pm (default_flags): Another dumb thinko.

Sun Apr 19 16:58:30 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/List.pm (flag_set): Fix dumb thinko.

Sat Apr 18 12:05:06 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Resend.pm (post): Add separate entities for notification
 	messages.  Purge all entities if not passing them on to bottom
 	half function.

Tue Apr 14 00:41:58 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/List.pm (flag_set): Look in nonmember_flags if checking
 	on a nonmember.
	(default_flags): Look in the config file instead returning
 	something hardcoded.

	* lib/mj_cf_defs.pl: Add defaults for below.

	* lib/mj_cf_data.pl: Add default_flags and nonmember_flags.

Sun Apr 12 00:03:57 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Majordomo.pm (_re_match): Prevent problems with specials in
 	matched string.

	* lib/Mj/Resend.pm (_post): Fix undef bug in subject_prefix
 	manipulation.

	* Makefile.PL (check_prereq): Print info on how to use CPAN to
 	install missing modules.

	* bin/mj_email: Don't close stderr.

	* bin/mj_trigger: Don't close stderr.

	* bin/mj_confirm: Don't close stderr.

	* bin/mj_resend: Don't close stderr.

	* installbin: Clean up pattern matches.
